Made changes to repository pattern, finished the localization of all views, only thing left to do is to fix edit and delete buttons.

--- a/Views/Memo/Edit.cshtml
+++ b/Views/Memo/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MemoProject.Models.Memo.MemoViewModel
+﻿@model MemoProject.Models.Memos.MemoViewModel
 
 @{
     ViewData["Title"] = "Edit";
