--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,5 +2,5 @@
 @using MemoProject.Models
 @using MemoProject.Common
 @using MemoProject.Models.EiditRole
-@using MemoProject.Models.Memo
+@using MemoProject.Models.Memos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
