--- a/Views/Admin/Edit.cshtml
+++ b/Views/Admin/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<EditRoleViewModel>
-
+@inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
 @{
     var userId = ViewBag.userId;
 }
@@ -7,7 +7,7 @@
 <form method="post">
     <div class="card">
         <div class="card-header">
-            <h2>Manage User Roles</h2>
+            <h2>@localizer["Manage User Roles"]</h2>
         </div>
         <div class="card-body">
             @for (int i = 0; i < Model.Count; i++)
