--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
+@inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@localizer["User Role Settings"]</h1>
 
 <table class="table">
     <thead>
@@ -17,7 +18,7 @@
         </tr>
     </thead>
     <tbody>
- @foreach (var item in Model)
+        @foreach (var item in Model)
         {
             <tr>
                 <td>
@@ -26,11 +27,11 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.UserName)
                 </td>
-                
-                <td>
-                    <a asp-action="Edit" asp-route-userId="@item.Id">Edit</a> |
 
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <td>
+                    <a asp-action="Edit" asp-route-userId="@item.Id">@localizer["Edit"]</a> |
+
+                    <a asp-action="Delete" asp-route-id="@item.Id">@localizer["Delete"]</a>
                 </td>
             </tr>
         }
