--- a/Views/Settings/Index.cshtml
+++ b/Views/Settings/Index.cshtml
@@ -11,9 +11,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>@localizer["Settings"]</h1>
 
-<h4>SettingViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,7 +31,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <select asp-for="TimeFormat" class="form-select timeFormat" aria-label="Default select example">
+                <select asp-for="TimeFormat" class="form-select timeFormat" aria-label="HH:mm:ss">
                     <option value="HH:mm:ss">HH:mm:ss</option>
                     <option value="HH:mm">HH:mm</option>
                     <option value="h:mm tt">h:mm tt</option>
@@ -46,7 +45,7 @@
             
             
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" id="settingsFormButton"/>
+                <input type="submit" value="@localizer["Save"]" class="btn btn-primary" id="settingsFormButton"/>
             </div>
         </form>
     </div>
