--- a/Views/Memo/_MemoEditModalPartial.cshtml
+++ b/Views/Memo/_MemoEditModalPartial.cshtml
@@ -13,7 +13,7 @@
                     <input type="hidden" asp-for="Id" />
                     <div class="form-group">
                         <label asp-for="Title" class="control-label"></label>
-                        <input asp-for="Title" class="form-control" />
+                        <input asp-for="Title" required class="form-control" />
                         <span asp-validation-for="Title" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Tags" class="control-label"></label>
-                        <input asp-for="Tags" class="form-control" />
+                        <input asp-for="Tags" required class="form-control" />
                         <span asp-validation-for="Tags" class="text-danger"></span>
                     </div>
 
