--- a/Views/Memo/_MemoModalPartial.cshtml
+++ b/Views/Memo/_MemoModalPartial.cshtml
@@ -4,24 +4,24 @@
     <div class=" modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modal-title">@localizer["Create Memo"]</h5>
+                <h5 class="modal-title" id="modal-title" >@localizer["Create Memo"]</h5>
                 <button type="button" class="btn close" data-dismiss="modal" aria-label="Close">X</button>
             </div>
             <div class="modal-body">
                 <form id="modalForm" asp-action="Create" asp-controller="Memo">
                     <div class="form-group">
-                        <label asp-for="Title"></label>
-                        <input asp-for="Title" class="form-control" />
+                        <label asp-for="Title" value=@localizer["Title"]></label>
+                        <input asp-for="Title" required class="form-control" />
                         <span asp-validation-for="Title" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Note"></label>
+                        <label asp-for="Note" value=@localizer["Note"]> </label>
                         <textarea asp-for="Note" row="5" class="form-control"></textarea>
                         <span asp-validation-for="Note" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Tags"></label>
-                        <input asp-for="Tags" class="form-control" />
+                        <label asp-for="Tags" value=@localizer["Tags"]></label>
+                        <input asp-for="Tags" required class="form-control" />
                         <span asp-validation-for="Tags" class="text-danger"></span>
                     </div>
                     <div class="modal-footer">
