--- a/Views/Settings/Index.cshtml
+++ b/Views/Settings/Index.cshtml
@@ -15,41 +15,48 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 mb-3">
         <form asp-action="SetLanguage" asp-controller="Memo"  method="post" id="settingsForm" >
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Zone" class="control-label"></label>
-                <input asp-for="Zone" class="form-control" />
+                <select asp-for="Zone" class="form-control">
+                    <option value="Central Europe Standard Time">Central Europe Standard Time</option>
+                    <option value="Eastern Standard Time">Eastern Standard Time</option>
+                    <option value="GMT Standard Time">GMT Standard Time</option>
+                </select>
                 <span asp-validation-for="Zone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <select asp-for="DateFormat" class ="form-select dateFormat" aria-label="dd/MM/yyyy">
+                <select asp-for="DateFormat" class ="form-control dateFormat" aria-label="dd/MM/yyyy">
                     <option  value="dd/MM/yyyy">dd/MM/yyyy</option>
                     <option value="MM/dd/yyyy">MM/dd/yyyy</option>
                 </select>
             </div>
             <div class="form-group">
-                <select asp-for="TimeFormat" class="form-select timeFormat" aria-label="HH:mm:ss">
+                <select asp-for="TimeFormat" class="form-control timeFormat" aria-label="HH:mm:ss">
                     <option value="HH:mm:ss">HH:mm:ss</option>
                     <option value="HH:mm">HH:mm</option>
                     <option value="h:mm tt">h:mm tt</option>
                 </select>
             </div>
             <div class="form-group">
-                <select id="selectForm" name="culture" asp-for="@culture.RequestCulture.UICulture.Name" asp-items="cultureList"></select>
-            </div>
-            
-            
-            
-            
+                <select id="selectForm" class="form-control" name="culture" asp-for="@culture.RequestCulture.UICulture.Name" asp-items="cultureList"></select>
+            </div>        
             <div class="form-group">
-                <input type="submit" value="@localizer["Save"]" class="btn btn-primary" id="settingsFormButton"/>
+                <input type="submit" value="@localizer["Save"]" class="btn btn-primary" id="settingsFormButton" />
+                <button id="defaultSettingsFormButton" class="btn btn-primary" type="button" asp-action="DefaultSetting" asp-controller="Settings">Default Settings</button>
             </div>
         </form>
     </div>
+    
 </div>
+<div id="modalContainer">
+
+</div>
+
+
 @section Scripts
 {
     <script>
@@ -63,35 +70,34 @@
 
                 })
             });
+            $("#defaultSettingsFormButton").click(function () {
+                $("#modalContainer").load(`/Settings/SetDefault`, _ => $("#defaultSettingsModal").modal("show"));
+            })
 
             $("#selectForm").on("click", function (event) {
                 event.preventDefault();
-
             })
             $("#selectForm").on("onchange", function (event) {
+                event.preventDefault()
+            });
+            $("#defaultSelectForm").on("click", function (event) {
                 event.preventDefault();
-
+            })
+            $("#defaultSelectForm").on("onchange", function (event) {
+                event.preventDefault();
             })
             $(".dateFormat").on("click", function (event) {
                 event.preventDefault();
-
             })
             $(".dateFormat").on("onchange", function (event) {
                 event.preventDefault();
-
             })
-
             $(".timeFormat").on("click", function (event) {
                 event.preventDefault();
-
             })
             $(".timeFormat").on("onchange", function (event) {
                 event.preventDefault();
-
             })
-
-
-
         })
     </script>
 }
